<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/setting"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/imb_setting_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imb_setting_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_setting_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:drawablePadding="20dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:text="@string/language"
        app:drawableStartCompat="@drawable/translate"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"/>

    <TextView
        android:id="@+id/btn_setting_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:text="@string/logout"
        app:drawableStartCompat="@drawable/exit"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting_language" />

</androidx.constraintlayout.widget.ConstraintLayout>