<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_main_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_main_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_main_item"
            android:foreground="@drawable/gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_main_item"
            app:layout_constraintStart_toEndOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/username"
            android:src="@drawable/person"
            app:layout_constraintBottom_toBottomOf="@+id/iv_main_item"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>