<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <com.example.mystory.ui.custom.EmailEdText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:drawablePadding="10dp"
        android:fontFamily="@font/quicksand"
        android:paddingBottom="30dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <com.example.mystory.ui.custom.PasswordEdText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="10dp"
        android:alpha="0"
        android:inputType="textPassword"
        android:paddingBottom="30dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="140dp"
        android:alpha="0"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/tag_login"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login"
        android:alpha="0"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_login"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/yellow_circle"
        android:contentDescription="@string/btn_login_login"
        app:backgroundTint="@null"
        android:alpha="0"
        app:icon="@drawable/next"
        app:iconGravity="textEnd"
        app:iconPadding="-1dp"
        app:iconSize="40dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:background="@color/yellow"
        android:fontFamily="@font/quicksand_bold"
        android:paddingHorizontal="8dp"
        android:text="@string/register"
        android:alpha="0"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>